--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
     "typescript"
   ],
   "author": "Daniel Schubert <me@danielschubert.dev> (https://danielschubert.dev)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^29.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^29.2.0",
+    "jest-environment-jsdom": "^29.2.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  }
 }
