--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "TypeScript WebSocket server",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "npm run lint && tsc --project tsconfig.build.json",
+    "lint": "eslint src && tsc --noEmit"
   },
   "keywords": [
     "websocket",
