--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "npm run lint && tsc --project tsconfig.build.json",
+    "build": "npm run lint && npm run test && tsc --project tsconfig.build.json",
     "lint": "eslint src && tsc --noEmit"
   },
   "keywords": [
